assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap');
/*--------------------------------------------------------General*/

*{
    margin:0;
    padding:0;
    border:0;
}

/*--------------------------------------------------------Colors*/

.about p, h2, h4 {
    color: #fcfcfc;
}

div q {
    color: #fcfcfc;
}

p a i {
    color: #fcfcfc;
}

.music p, .merch p {
    color:#fcfcfc;
}

.card-deck p {
    color: #E40F0F;
}



/*------------------------------------------Hero Image and Nav*/
.nav-link  {
    color:#E40F0F;
    
}


.nav-link:hover {
    color: #950808;
}
.hero-box{
    margin: 0;
    padding: 0;
}

.hero-image {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    height: auto;
    width: 100%;
}

/*---------------------------------------------------Sign Up Modal*/
#sign-up {
    position: absolute;
    top: 0;
    right: 0;
    margin: 1rem;
    
    background-color: #950808;
}
.modal-header {
    background-color: #950808;
    color: #fcfcfc;
    
}

.modal-body {
    background-color: #950808;
    color: #fcfcfc;
}

.modal .submit {
    background-color: #33cc33;
    color: #950808;
}




/*--------------------------------------------------------All Pages*/

body {
    background-color: black;
}

h5 {
    font-family: "Anton", sans-serif;
    color: #fcfcfc;
}
h2 {
    font-family: "Anton", sans-serif;
    font-size: xx-large;
    color: #fcfcfc;
}

p {
    font-family: "Roboto", sans-serif;
}

li a {
    font-family: "Anton", sans-serif;
    font-size:x-large;
}
/*--------------------------------------------------------Home Page*/

.red-card {
    background-color: #950808;
}

.sub-title {
    margin-top: 1rem;
}



/*---------------------------------------------------------Music Page*/

.music p, .music h2, .merch p, .merch h2 {
    margin-left: 1rem;
}
.music .card-body, .merch .card-body {
    background-color: lightgray;
}
/*---------------------------------------------------------Booking Form*/

.border {
    border: 1px solid #fff;
    margin: 10% 10% 10% 10%;
    Padding: 2px;
    color: #fcfcfc;
    background-color: #950808;
}   

.border .btn-primary {
    background-color: #33cc33;
    color: #950808;
}


#myBtn {
    display: none;
    position: fixed; 
    bottom: 87px;
    right: 3px; 
    z-index: 99;
    width: 40px; 
    border: none; 
    outline: none;
    background-color: #A9A9A9; 
    color: #fff; 
    cursor: pointer;
    padding: 10px; 
    border-radius: 10px;
    font-size: 8px; 
  }
  
  #myBtn:hover {
    background-color: #555; 
    color: #fff;
}

/*----------------------------------------------------------Footer----*/

footer {
    background-color: #950808;
    color: #fff;
    min-height: 120px;
    margin: 0;
    postion: fixed;

}

.social-links {
    padding-bottom: 15px;
    text-align: center;
    
}

.social-links li a i {
    width: 36px;
    height: 36px;
    padding: 15px 0;
    border-radius: 50%;
    font-size: 18px;
    line-height: 7px;
    text-align: center;
    color: #fff;
    margin-top:40px;
    background: black;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background: #E40F0F;

#footer-details {
    padding: 20px;
}

/*--------------------------------Media Queries*/

